Lifestyle1 SignUp Lifestyle2 Button Section addes.html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,42 @@
 
         <!-- Lifestyle part ends here -->
 
+        <!-- Sign up part starts here -->
+
+        <section class="SignUp">
+            <div class="signup_contents">
+                <h1>Sign up for our newsletter!</h1>
+                <input type="email" placeholder="Enter a valid email address">
+            </div>
+        </section>
+
+        <!-- Sign up part ends here -->
+
+        <!-- Lifestyle2 part starts here -->
+        <section class="Lifestyle">
+            <div class="item1">
+
+                <img src="Images/Lifestyle3.png" alt="">
+                <a href="">Lifestyle</a>
+                <h1>Top 10 song for running </h1> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea </p>               
+            </div>
+
+            <div class="item1">
+
+                <img src="Images/Lifestyle4.png" alt="">
+                <a href="">Lifestyle</a>
+                <h1>Cold winter days </h1> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea. </p>               
+            </div>
+        </section>
+ 
+        <!-- Lifestyle2 part endss here -->
+
+        <section class="button">
+            <button>Load More</button>
+        </section>
+        
 
 </body>
 </html>
