Footer Section added.html

--- a/index.html
+++ b/index.html
@@ -120,10 +120,37 @@
  
         <!-- Lifestyle2 part endss here -->
 
+        <!-- Button Section Starts -->
         <section class="button">
             <button>Load More</button>
         </section>
-        
+        <!-- Button Section Ends -->
+
+        <!-- Footer Section Starts -->
+
+        <footer>
+            <div class="footerwraper">
+                <div class="Terms">
+                    <ul>
+                        <li><a href="">Terms and Conditions</a></li>
+                        <li><a href="">Privacy</a></li>
+                    </ul>
+                </div>
+                <div class="Icons">
+                    <ul>
+                        <li><a href="">Follow</a></li>
+                        <li><a href="">Follow</a></li>
+                        <li><a href="">Follow</a></li>
+                        <li><a href="">Follow</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+
+
+
+        <!-- Footer Section Ends -->
+
 
 </body>
 </html>
